--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,61 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400&display=swap');
+
+*{
+  padding: 0;
+  margin: 0;
+  font-family: 'Roboto Mono', monospace;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+  background-color: #F1F2F6;
+  background-image: radial-gradient(
+    #C5AFA0 2px,
+    transparent 3px
+    );
+  background-size: 26px 26px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.App{
+  background-color: #FAFFFD;
+  width: 100vw;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.HeadBarContainer{
+  width: 100%;
+  height: 200px;
+  background-color: #000E0F;
+  /* !Borrar comentarios y el color de guía*/
+  color: aliceblue; 
+}
+
+.HeadBarImg{
+  height: 100%;
+  background-image: url('https://www.mundopeliculas.tv/wp-content/uploads/2017/11/ESCRITORES3.jpeg');
+  background-size: cover;
+  background-position: center;
+}
+
+.SearchBox{
+  margin-block: 1rem;
+  display: flex;
+  justify-content: center;
+}
+
+.LocationInfo{
+  margin-block: 1rem;
+  display: grid;
+  justify-content: center;
+}
+.ResidentContainer{
+  display: grid;
+  justify-content: center;
+  grid-template-columns: 350px 350px 350px;
+  grid-row: auto;
+  gap: 1rem;
+}
+.ResidentInfo{
+  border: 1px solid navy;
+  width: 350px;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
